5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4006/executions/1756_672.log
== TEST (2019-05-22 12:36:02) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
vo =  seis(0, dtype=int)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 12:36:37) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 12:38:11) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
a = array(eval(input("")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 12:39:47) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
a = array(eval(input("")))
v = a (1,dtype=int )
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 12:40:29) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
a = array(eval(input("")))
v = a (1,dtype=int )
v1 = ones (6, dtype=int)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 12:40:46) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
a = array(eval(input("")))
v = a (1,dtype=int )
v1 = ones (6, dtype=int)
print(v)
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 12:41:02) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
a = array(eval(input("")))
v = a (1,dtype=int )
v1 = ones (6, dtype=int)
print(v)
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 12:42:12) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
a = array("")
v = a (1,dtype=int )
v1 = ones (6, dtype=int)
print(v)
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 12:42:48) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
a = 6
v = a (1,dtype=int )
v1 = ones (6, dtype=int)
print(v)
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 12:42:57) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
a = 6
v = a (1, dtype=int )
v1 = ones (6, dtype=int)
print(v)
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 12:43:51) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
a = array(eval(input("numero")))
v = a (1, dtype=int )
v1 = ones (6, dtype=int)
print(a)
print(v)
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 12:44:33) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
a = array(eval(input("numero")))
v1 = ones (6, dtype=int)
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 12:44:44) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
a = array(eval(input("numero")))
v1 = ones (6, dtype=int)
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 12:44:49) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
a = array(eval(input("numero")))
v1 = ones (6, dtype=int)
print(v1)
-- EXECUTION TIME:
0.520569
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 12:45:03) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
a = array(eval(input("numero")))
v1 = ones (6, dtype=int)
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 12:45:30) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
a = array(eval(input("numero:
							")))
v1 = ones (6, dtype=int)
print(v1)
-- ERROR:
File "XXXX", line 3
    a = array(eval(input("numero:
                                ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 12:45:35) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
a = array(eval(input("numero")))
v1 = ones (6, dtype=int)
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 12:45:48) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
a = array(eval(input("numero")))
v1 = ones (6, dtype=int)
print(v1)
-- EXECUTION TIME:
0.336623
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 12:46:24) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
a = array(eval(input("numero")))
v1 = ones (6, dtype=int)
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 12:46:32) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
a = array(eval(input("numero")))
v1 = ones (6, dtype=int)
print(v1)
-- EXECUTION TIME:
0.513366
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 12:56:03) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
a = array(eval(input("numero")))
v1 = ones (6, dtype=int)
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 12:56:08) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
a = array(eval(input("numero")))
v1 = ones (6, dtype=int)
print(v1)
-- EXECUTION TIME:
0.296594
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 12:56:17) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
a = array(eval(input("numero")))
v1 = ones (6, dtype=int)
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 12:56:17) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
a = array(eval(input("numero")))
v1 = ones (6, dtype=int)
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 13:03:52) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
a = array(eval(input("numero")))
v1 = ones (a, dtype=int)
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 13:03:57) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
a = array(eval(input("numero")))
v1 = ones (a, dtype=int)
print(v1)
-- EXECUTION TIME:
0.579485
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
